mongo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb-dev-ns
  labels:
    app: mongodb-dev-ns
