mongo-express-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express-deploy
  labels:
    app:  mongo-express-deploy
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:latest
        resources: {}
        ports:
        - containerPort:  8081
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: default
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30000
