k8s-dashboard-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

# Ingress does not work on WSL2
# https://github.com/kubernetes/minikube/issues/7332

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  # we also need to add the domain name to a dns
  # - host file on the local machine
  - host: dashboard.atoz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
